stealth (2.04.00)
  
  * Added detection of invalid child process command texts: commands not
    resulting in an exit value are considered invalid and terminate Stealth.
    (scanner/testexitvalue.cc)

  * Added cross reference listing to the standard documentation (stealth.xref)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 03 Jun 2012 15:11:30 +0200

stealth (2.03.00)
  
  * Spurious [Fatal] message when starting stealth are prevented

  * This version expects Bobcat >= 3.00.00

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 May 2012 10:47:41 +0200

stealth (2.02.02)

  * Recompilation and minor modifications to prepare for g++ 4.7

  * YEARS updated

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 08 Jan 2012 14:42:34 +0100

stealth (2.02.01)

  * Removed FnWrap* calls from Stealth's sources
  
  * `build' script now recognizes CXXFLAGS and LDFLAGS for, resp. g++ and ld
    flags. Default values are set in INSTALL.im, as before.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 26 Jun 2011 14:24:10 +0200

stealth (2.02.00)

  * The file specifying the names of files whose integrity should not be
    checked may contain empty lines and lines whose 1st non-blank characters
    start with #. Such lines are ignored.

  * The 'build' script now uses the -g option by default (set in
    INSTALL.im). To modify the g++ compilation options change the #define
    CPPOPT in INSTALL.im. By default it is set to "-O2 -g". To modify the
    flags `on the fly' set the environment variable CPPFLAGS, overruling
    CPPOPT.  The option "-Wall" is always used and should not be altered.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 07 Jun 2011 13:06:18 +0200

stealth (2.01.00)

  * Stealthcleanup now has a -v flag, showing its actions

  * Following an upgrade to bobcat 2.11.00 stealth should be recompiled

  * Identifiers in #defines in configuration files may now also contain 
    hyphens and underscores.
